# qwew

./: Cargo.toml  WS_PROTOCOL.md
qwew-backend/: Cargo.toml
qwew-backend/docker/: compose.yml
qwew-backend/docker/migrations/: 001_initial_schema.sql
qwew-backend/src/: config.rs  main.rs
qwew-backend/src/db/: connection.rs  mod.rs
qwew-backend/src/handlers/: auth.rs  extractors.rs  invites.rs  messages.rs  mod.rs  users.rs  ws.rs
qwew-backend/src/models/: invite.rs  message.rs  mod.rs  user.rs
qwew-backend/src/utils/: jwt.rs
qwew-backend/src/ws/: mod.rs  tickets.rs
qwew-frontend/: Cargo.toml  package-lock.json  package.json
qwew-frontend/src/: app.css  app.html
qwew-frontend/src-tauri/: Cargo.toml  tauri.conf.json
qwew-frontend/src-tauri/.cargo/: config.toml
qwew-frontend/src-tauri/capabilities/: default.json
qwew-frontend/src-tauri/icons/: icon.icns
qwew-frontend/src-tauri/src/: main.rs
qwew-frontend/src/lib/: api.ts  session.ts  store.svelte.ts  ws.ts
qwew-frontend/src/lib/components/: Auth.svelte  ChatWindow.svelte  Settings.svelte  Sidebar.svelte
qwew-frontend/src/routes/: +page.svelte
