[package]
name = "qwew-backend"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio", 
    "tls-native-tls", 
    "postgres", 
    "chrono", 
    "uuid"
] }

argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9"
rand = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"

futures-util = "0.3"
